# FunTableSynth

./: .gitignore  CMakeLists.txt  README.md
src/: AsyncThread.cpp  AsyncThread.h  Controller.cpp  Controller.h  MySynth.h  PluginProcessor.cpp  PluginProcessor.h  PyInterpreter.cpp  PyInterpreter.h  Resources.h  ThreadSafeQueue.h  WaveShaper.cpp  WaveShaper.h  helpers.h
src/py/: internal.py
src/synth/: FTSynth.h  FySynth.cpp  SoundAndVoice.cpp  SoundAndVoice.h  TableProcessor.cpp  TableProcessor.h
src/ui/: MainUI.cpp  MainUI.h  PluginEditor.cpp  PluginEditor.h  ShaperGraph.cpp  ShaperGraph.h  Sliders.cpp  Sliders.h  UiState.h
